--- a/task-08.html
+++ b/task-08.html
@@ -31,13 +31,13 @@
     <form class="login-form">
       <label>
         Email
-        <input type="email" name="email" />
+        <input class="email-input" type="email" name="email" />
       </label>
       <label>
         Password
-        <input type="password" name="password" />
+        <input class="password-input" type="password" name="password" />
       </label>
-      <button type="submit">Login</button>
+      <button class="submit-btn" type="submit">Login</button>
     </form>
 
     <script src="js/task-08.js" type="module"></script>
