--- a/task-08.html
+++ b/task-08.html
@@ -31,11 +31,11 @@
     <form class="login-form">
       <label>
         Email
-        <input class="email-input" type="email" name="email" />
+        <input type="email" name="email" />
       </label>
       <label>
         Password
-        <input class="password-input" type="password" name="password" />
+        <input type="password" name="password" />
       </label>
       <button class="submit-btn" type="submit">Login</button>
     </form>
